--- a/styles/index.less
+++ b/styles/index.less
@@ -12,4 +12,25 @@ body {
   .orchestra {
     display: inline;
   }
+
+  .keyboard{
+    width: 100%;
+    text-align: center;
+    .note {
+      height: 20px;
+      width: 20px;
+      border: solid 1px white;
+      color: white;
+      border-radius: 4px;
+      text-align:center;
+      margin: 0px 4px;
+      line-height:20px;
+      font-family:sans-serif;
+      display:inline-block;
+    }
+    .note.pressed {
+      background: rgba(255,255,255,0.3);
+    }
+  }
 }
+
